[package]
name    = "wdem-tracker"
version = "0.1.0"
authors = ["Weird Constructor <weirdconstructor@gmail.com>"]
edition = "2018"

[dependencies]
serde              = { version = "1.0", features = [ "derive" ] }
serde_json         = "1.0"
ggez               = "0.5.1"
wlambda            = { path = "../wlambda" }
wctr_signal_ops    = { path = "../wctr-signal-ops" }
wave_sickle        = { path = "../wave-sickle" }
palette            = "0.2"
zip                = "0.5.3"

[dev-dependencies]
ggez               = "0.5.1"
# vecmath            = "1.0.0"
# nalgebra           = "0.18.0"
# mint               = "0.5.1"

[profile.dev]
opt-level = 1

#[dependencies.sdl2]
#version="0.32"
#default-features=false
#features=["ttf","bundled","gfx"]
##,"image","gfx","ttf"]
##,"mixer"]
